Update some code.

--- a/src/styles/antd.less
+++ b/src/styles/antd.less
@@ -73,3 +73,10 @@
     background-color: transparent;
 }
 
+.ant-drawer-mask {
+    position: revert !important;
+}
+
+.ant-drawer-open .ant-drawer-mask {
+    position: absolute !important;
+}
